<resources>
  <string name="app_name">impl</string>
  <string name="loginform_hint_login">Логин</string>
  <string name="loginform_hint_password">Пароль</string>
  <string name="app_brand_name">Asset Case</string>
  <string name="loginform_btn_signin">Войти</string>
  <string name="loginform_btn_forgot_password">Забыл пароль?</string>
  <string name="loginform_text_welcome">Добро пожаловать в Сундук&#160;активов! Войдите&#160;в&#160;свой аккаунт.</string>
  <string name="loginform_text_slogan">Приглядим за вашими активами!</string>
</resources>
