<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <View
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:background="?colorPrimary"
      app:layout_constraintBottom_toTopOf="@id/guideline"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"/>

  <TextView
      style="?textAppearanceHeadline4"
      android:textColor="?colorOnPrimary"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/app_brand_name"
      android:layout_marginStart="16dp"
      android:layout_marginBottom="8dp"
      app:layout_constraintStart_toStartOf="@id/loginCard"
      app:layout_constraintBottom_toTopOf="@id/loginCard"/>

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline"
      android:orientation="horizontal"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintGuide_percent="0.3"/>

  <androidx.cardview.widget.CardView
      android:clipChildren="false"
      android:clipToPadding="false"
      android:id="@+id/loginCard"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="16dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:contentPaddingTop="16dp"
      app:contentPaddingLeft="16dp"
      app:contentPaddingRight="16dp"
      app:contentPaddingBottom="12dp"
      app:cardCornerRadius="8dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@id/guideline"
      app:layout_constraintBottom_toBottomOf="@id/guideline">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        android:clipToPadding="false">

      <TextView
          android:id="@+id/tvWelcome"
          style="?textAppearanceBody2"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:text="@string/loginform_text_welcome"
          android:gravity="center"
          app:layout_constraintStart_toStartOf="@id/tilLogin"
          app:layout_constraintEnd_toEndOf="@id/tilLogin"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintBottom_toTopOf="@id/tilLogin"/>

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/tilLogin"
          android:layout_marginTop="16dp"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:hint="@string/loginform_hint_login"
          app:layout_constraintBottom_toTopOf="@id/tilPassword"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/tvWelcome"
          app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/tilPassword"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
          android:layout_width="0dp"
          android:layout_marginTop="8dp"
          android:layout_height="wrap_content"
          android:hint="@string/loginform_hint_password"
          app:layout_constraintBottom_toTopOf="@+id/btnLogin"
          app:layout_constraintEnd_toEndOf="@id/tilLogin"
          app:layout_constraintStart_toStartOf="@id/tilLogin"
          app:layout_constraintTop_toBottomOf="@id/tilLogin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.button.MaterialButton
          android:id="@+id/btnLogin"
          style="@style/Widget.MaterialComponents.Button"
          android:layout_marginTop="8dp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/loginform_btn_signin"
          app:layout_constraintStart_toStartOf="@id/tilLogin"
          app:layout_constraintTop_toBottomOf="@id/tilPassword"/>

      <com.google.android.material.button.MaterialButton
          android:id="@+id/btnForgotPassword"
          style="@style/Widget.MaterialComponents.Button.OutlinedButton"
          android:layout_width="wrap_content"
          android:layout_height="0dp"
          android:text="@string/loginform_btn_forgot_password"
          app:layout_constraintEnd_toEndOf="@id/tilLogin"
          app:layout_constraintTop_toTopOf="@id/btnLogin"
          app:layout_constraintBottom_toBottomOf="@id/btnLogin"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

  </androidx.cardview.widget.CardView>

  <androidx.appcompat.widget.AppCompatImageView
      android:id="@+id/ivClipart"
      android:layout_width="56dp"
      android:layout_height="56dp"
      android:tint="?colorOnBackground"
      app:layout_constraintBottom_toTopOf="@id/tvSlogan"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:srcCompat="@drawable/ic_case"/>

  <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/tvSlogan"
      style="?textAppearanceCaption"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="40dp"
      android:text="@string/loginform_text_slogan"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>